<resources>
    <string name="app_name">Notifikasi Kecelakaan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muhammad Fajar Ibrahim</string>
    <string name="nav_header_subtitle">085232689830</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Notifikasi Kecelakaan</string>
    <string name="menu_gallery">Galery</string>
    <string name="menu_slideshow">Riwayat Kecelakaan</string>
    <string name="menu_tools">Pesan</string>
    <string name="menu_share">Undang Teman</string>
    <string name="menu_send">Pengaturan</string>
    <string name="google_maps_key">AIzaSyAiCKvJcTu95NxXaqUwAE2ntEITNzoCmPk</string>
    <string name="footer">Aplikasi Notifikasi Kecelakaan Lalu Lintas</string>
    <string name="menu_logout">Log Out</string>
    <string name="tv_jam">Jam</string>
    <string name="nama">Nama Respondent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_lokasi">Lokasi</string>
    <string name="tv_waktu">Waktu</string>
    <string name="tv_keterangan">Keterangan</string>
    <string name="menu_history">Histori</string>
    <string name="menu_pesan">Pesan</string>
</resources>
