<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_notification_important_black_18dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_image_black_18dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_riwayat"
            android:icon="@drawable/baseline_history_black_18dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_pesan"
            android:icon="@drawable/baseline_message_black_18dp"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_supervised_user_circle_black_18dp"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_applications_black_18dp"
            android:title="@string/menu_send" />
    </group>

</menu>
