<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ta.notifikasikecelakaan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ta.notifikasikecelakaan.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_riwayat"
        android:name="com.ta.notifikasikecelakaan.ui.riwayat.RiwayatFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_pesan"
        android:name="com.ta.notifikasikecelakaan.ui.pesan.PesanFragment"
        android:label="@string/menu_pesan"
        tools:layout="@layout/fragment_pesan" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ta.notifikasikecelakaan.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.ta.notifikasikecelakaan.ui.setting.SettingFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_setting" />
</navigation>