<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools" >

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="@string/tv_keterangan" />
        <TextView
            android:id="@+id/tv_lokasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="17dp"
            android:maxLines="2"
            tools:text="@string/tv_lokasi" />
        <TextView
            android:id="@+id/tv_waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="17dp"
            android:maxLines="2"
            tools:text="@string/tv_waktu" />

    </LinearLayout>
</RelativeLayout>
